Report: Moved "Learnable Programming" to after "IDE for GD".

--- a/report.tex
+++ b/report.tex
@@ -483,6 +483,20 @@
 	
 	Rosetta has been extensively used for teaching programming to architecture students at \ac{ist}. 
 
+\subsubsection{Learnable Programming\cite{victor2012learnable}}
+	Writing a program in a programming language can be difficult even if it was designed to be easy to use. 
+	When a programming language is coupled with an environment specifically designed for it the programming experience improves drastically. 
+	In his essay\cite{victor2012learnable}, Bret Victor described design principles over systems for learning programming.
+	
+	The programming language and the programming environment are essential parts of the programming experience.
+	The programming language is allows the programmer to express himself in a clear, specific way; the programming environment allows him to write programs and understand what they actually do.
+	
+	Programs written in the programming language need to reflect something from the programmer that is useful for programming.
+	They should be about things the programmer can identify with (something that he knows); should allow him to talk about different parts of the problem separately; should allow him to bring those parts together; and should be readable.
+	
+	The environment needs to help understand the meaning of the parts of the program; understand the way the program execution evolves; understand the way the state evolves; assemble parts together; and create new parts from existing ones.
+	It should make these things easy to do, after all these can be done by the programmer alone if he is willing to.
+
 \subsection{Moving to the Web}
 	Web browsers didn't start as feature-rich and performant as they are now.
 	They started as hypertext browsers that made it easier to read hypertext.
@@ -595,20 +609,6 @@
 	As described by one of its developers\footnote{http://www.chris-granger.com/2013/01/24/the-ide-as-data/}, LightTable can be described as a set of \emph{Objects}, each having a set of \emph{Behaviors} and being tagged with a set of \emph{Tags}. 
 	The \emph{Behaviors} describe how an \emph{Object} reacts when events are raised on it. \emph{Tags} are groups of \emph{Behaviors}. 
 	When an event is raised on an \emph{Object} both its \emph{Behaviors} and those from its \emph{Tags} are notified.
-
-\subsection{Learnable Programming\cite{victor2012learnable}}
-	Writing a program in a programming language can be difficult even if it was designed to be easy to use. 
-	When a programming language is coupled with an environment specifically designed for it the programming experience improves drastically. 
-	In his essay\cite{victor2012learnable}, Bret Victor described design principles over systems for learning programming.
-
-	The programming language and the programming environment are essential parts of the programming experience.
-	The programming language is allows the programmer to express himself in a clear, specific way; the programming environment allows him to write programs and understand what they actually do.
-
-	Programs written in the programming language need to reflect something from the programmer that is useful for programming.
-	They should be about things the programmer can identify with (something that he knows); should allow him to talk about different parts of the problem separately; should allow him to bring those parts together; and should be readable.
-
-	The environment needs to help understand the meaning of the parts of the program; understand the way the program execution evolves; understand the way the state evolves; assemble parts together; and create new parts from existing ones.
-	It should make these things easy to do, after all these can be done by the programmer alone if he is willing to.
 
 \subsection{OpenJSCAD}
 	OpenJSCAD is a javascript application (or rather, an application based on web technologies).
