--- a/report.tex
+++ b/report.tex
@@ -695,12 +695,10 @@
 
 \subsection{Aspects of the solution}
 	One aspect that has to be set is \textbf{what is the language} used to make the programs.
-	Associative vs imperative. 
-	With side-effects vs without side-effects.
-	Its syntax.
+	This aspect involves things like what control flow mechanisms are available, whether side-effects exist or not, and what is the syntax for each component of the language.
+	It deals with how the language works.
 
 	Another aspect is the \textbf{amount of help, documentation or reaction} the system has to support the user while he is thinking about and making the program.
-	In an ideal scenario he is capable of either doing both at the same time or being able to switch \emph{modes} quickly without losing context. 
 	In the light of \cite{victor2012learnable}, the system should have good answers to the questions proposed on what is a good programming environment.
 
 	Another aspect is the \textbf{implementation of primitives} of the language like constructive solid geometry, lofts and sweeps. 
@@ -708,13 +706,10 @@
 	Being useful is more important than the number of primitives implemented. 
 	This leads to other concern, these primitives have to have some correspondence to primitives available in other tools used in architecture.
 
-	For simplicity it is perhaps better to support only 3D modeling primitives as these can show immediate results for this thesis, e.g. energy consumption analysis is a concern in architecture but will not be immediately supported. Other modeling areas will be overlooked either because of the current lack of knowledge of the author and/or because of the added amount of effort to provide them.
-
 	Other aspect is how the system lets users \textbf{document the programs} they made. 
 	It is characteristic to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than to interpret the program directly). 
 	The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper. 
 	It will also be useful to look at how current programming languages are usually documented. 
-	Other source of inspiration to draw from is Donald Knuth's Literate Programming.
 
 	Other aspect is the \textbf{persistence of programs} between usage sessions and in cases the system crashes.
 	In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. 
