Report: Reflected new report structured as present in this semester's recomendations.

--- a/report.tex
+++ b/report.tex
@@ -159,7 +159,7 @@
 
 %----------------------------------------------------
 %NAVobjectives
-\section{Objectives (1pg)}
+\subsection{Objectives (1pg)}
 	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever they are working.
 
 	%Why does it need to be accessible wherever the architect is?
@@ -798,6 +798,11 @@
 	The usual cause being the increasing complexity of the program or the presence of infinite loops in the program. 
 	This problem will have to be addressed in order to have a usable interface. 
 	Some alternatives to solve the problem could be running the program asynchronously and retrieving the results afterwards or instrumenting the program so it could be run interleaved with interface handling and stopped if necessary.
+
+%----------------------------------------------------
+%NAVschedule
+\section{Schedule}
+
 
 %----------------------------------------------------
 %NAVconclusions
