Schedule: Some thoughts on scheduling.

--- a/report.tex
+++ b/report.tex
@@ -821,7 +821,16 @@
 %----------------------------------------------------
 %NAVschedule
 \section{Schedule}
-
+	Apart from time for implementing each of the components of the system, there needs to be time for writing and publication.
+	
+	To implement functionality, it needs to be understood, planned and written.
+	By understood I mean that the idea for the functionality has to appear and be understood to actually be implementable;
+	this step is interleaved with actually implementing the functionality.
+	
+	We are giving importance to the implementation of the code editor.
+	
+	There must be time for testing the system and its parts.
+	It can be dedicated to user testing and performance testing.
 
 %----------------------------------------------------
 %NAVconclusions
