General Solution: Small rearrangement.

--- a/report.tex
+++ b/report.tex
@@ -734,8 +734,7 @@
 	
 	As shown in Figure \ref{fig:gen:sol}, there are three main components, the local program editor, where the programs are edited and executed, the remote repository, which handles persistent storage of programs, and the external execution backend, which is responsible for translating programs to other \ac{cad} software.
 	
-	The local code editor communicates with the remote code repository to ``post'' or ``get'' code from the repository.
-	
+	The local code editor and the remote code repository communicate to ``post'' new code to or ``get'' code from the repository.
 	The local code editor communicates with the \ac{cad} execution backend to request the execution of programs and manages their results.
 	
 	\begin{figure}
