Schedule: Yet another dumb version of the overall distribution of work, now with a temporary picture/chart.

--- a/report.tex
+++ b/report.tex
@@ -820,16 +820,28 @@
 %----------------------------------------------------
 %NAVschedule
 \section{Schedule}
-	Apart from time for implementing each of the components of the system, there needs to be time for writing and publication.
+	Some work as already been done.
+	The schedule for the work concluding the thesis is presented in Figure \ref{fig:schedule}.
+	It has high-level tasks to convey the overall distribution of work for the thesis.
 	
-	To implement functionality, it needs to be understood, planned and written.
-	By understood I mean that the idea for the functionality has to appear and be understood to actually be implementable;
-	this step is interleaved with actually implementing the functionality.
+	\begin{figure}
+		\centering
+		\includegraphics[width=1.0\textwidth]{img/schedule}
+		\caption{This chart shows the overview of the work distribution.}
+		\label{fig:schedule}
+	\end{figure}
 	
-	We are giving importance to the implementation of the code editor.
+	The local code editor is the one where must implementation work is since it is the central part of the architecture.
+	When the code editor becomes locally operational we will start to implement the remote code repository and the CAD execution backend.
+	As these implementation tasks are complex, they need to be further decomposed.
 	
-	There must be time for testing the system and its parts.
-	It can be dedicated to user testing and performance testing.
+	During implementation we will test both user experience and performance of the system as part of its evaluation.
+	
+	Close to the end of the implementation we will start to assemble the thesis document and its defense.
+	We will be writing parts of the document as candidates to publication in Architecture and Programming conferences.
+	(Themes being results and reasons of our work.)
+		
+	
 
 %----------------------------------------------------
 %NAVconclusions
