--- a/report.tex
+++ b/report.tex
@@ -572,7 +572,7 @@
 
 	\begin{figure}
 	  \centering
-	  \includegraphics[width=1.0\textwidth]{img/lt_game_example}
+	  \includegraphics[width=1.0\textwidth]{img/lt_game_example__inv}
 	    \caption{A prototype version of LightTable. A game is being run inside it while some of its code is displayed in separate editors.}
 	  \label{fig:lt:draft:table}
 	\end{figure} 
@@ -586,7 +586,7 @@
 
 	\begin{figure}
 	  \centering
-	  \includegraphics[width=1.0\textwidth]{img/lt_clojure_table}
+	  \includegraphics[width=1.0\textwidth]{img/lt_clojure_table__inv}
 	    \caption{An experiment showing a \emph{code document} on the left and a \emph{namespace browser} on the top right.}
 	  \label{fig:lt:clojure:table}
 	\end{figure} 
@@ -600,7 +600,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[width=1.0\textwidth]{img/lt_val_overlay}
+		\includegraphics[width=1.0\textwidth]{img/lt_val_overlay__inv}
 			\caption{An example of LightTable's value overlaying. The occurrences of the variables \emph{a}, \emph{b} and \emph{ab} were replaced with their values while evaluating the expression \emph{(x 3 7)}; the result of this expression is also overlaid.}
 		\label{fig:lt:val:overlay}
 	\end{figure}
