Report: Read through corrections.

--- a/report.bib
+++ b/report.bib
@@ -177,3 +177,12 @@ year = {2012}
   doi       = {10.1109/MCSE.2007.53},
   publisher = {IEEE Computer Society},
 }
+@article{tilkov2010node,
+	title={Node. js: Using JavaScript to build high-performance network programs},
+	author={Tilkov, Stefan and Vinoski, Steve},
+	journal={IEEE Internet Computing},
+	number={6},
+	pages={80--83},
+	year={2010},
+	publisher={IEEE}
+}
