--- a/report.tex
+++ b/report.tex
@@ -48,7 +48,7 @@
 	Programming is becoming an essential way of expressing ideas in a way a computer can understand them.
 	Once a computer can understand an idea (or process) it can apply it as many times as we want.
 
-	Expressing ideas or processes in a way a computer understands requires us to specify every detail of what we have in mind (sometimes too much) which forces us to really understand what it is.
+	Expressing ideas or processes in a way a computer understands requires us to specify every detail of what we have in mind (sometimes too much) which forces us to really understand what they are.
 
 	Many people have understood the power that comes from having a computer (or machine) doing lots of mechanical work and so have adopted programming as a new tool.
 
@@ -68,13 +68,13 @@
 	It is an inevitably complex activity.
 	And the programmer's productivity and enjoyment suffers from it.
 	There has to be some way of lifting some of the work from the programmer.
-	That is where integrated programming environments come in.
+	That is where \ac{ide}s come in.
 
-	Integrated development environments bring together all the tools needed while programming and automates all its small steps.
+	\ac{ide}s bring together all the tools needed while programming and automates all its small steps.
 	They might do it so well that the programmer might forget that those steps still exist.
 	We can imagine that novice programmers using these environments would simply be unaware of them.
 	Programmers still have to write, run and debug their programs but they do so without losing time performing all those steps.
-	And so integrated development environments have become essential to programming.
+	And so \ac{ide}s have become essential to programming.
 	
 	%Go from software production IDEs to architecture specific IDEs.
 	%Software development -> dynamic languages -> domain specific -> architecture specific
@@ -85,28 +85,27 @@
 	They are good for large scale software projects but not as good for smaller projects such as making prototypes or merging programs together.
 	They still require a lot of configuration before the programmer can start using them to make a program.
 	Again, a programmer is being burdened with small steps that could be automated.
-	This is where dynamic languages and their integrated programming environments can be useful.
+	This is where dynamic languages and their \ac{ide}s can be useful.
 
 	%IDEs dynamic languages.
-	Integrated programming environments for dynamic programming languages can go a step further in shortening the cycle between editing the program and seeing its effects.
+	\ac{ide}s for dynamic programming languages can go a step further in shortening the cycle between editing the program and seeing its effects.
 	They allow programmers to quickly run their programs and provide ways to interact with them like \ac{repl}s.
 	The programmer can now write his program and then start experimenting with it in the \ac{repl}, quickly testing some areas or quickly sketching new portions of the program.
 	All this without having to write a separate program and compiling both.
-	Dynamic languages also play a part.
+	Dynamic languages themselves also play a part.
 	They start to blur the line between programming language and programming environment.
 	Being less strict and providing higher level concepts allows them to free programmers from having to state every detail of the program.
-	They allow the missing details to be implicit.
+	They allow those missing details to be implicit.
 
 	%IDEs domain specific.
-	Integrated development environments for dynamic languages are better but they are still too general.
-	They stop at helping to program without covering problems specific to the bigger activities of their users.
+	\ac{ide}s for dynamic languages are better but they are still too general.
+	They stop at helping to program without covering problems specific to the bigger activities of their users, what they actually want to program.
 	They don't automate the small repetitive steps present in activities where programming is used as a tool.
-	Integrated development environments like IPython and Impromptu are another step further.
+	\ac{ide}s like IPython and Impromptu are another step further.
 	IPython helps scientists by providing them what is relevant to their work, such as automating gathering of data, transforming and visualizing it in order to draw conclusions.
 	It integrates taking notes and programming.
 	They no longer have to join the pieces of information into a single space, it is already done by the environment.
-	Impromptu helps musicians.
-	Musicians can use Impromptu to compose music procedurally.
+	Impromptu helps musicians to compose music procedurally.
 	A musician using Impromptu doesn't have generate a MP3 file and then play it to actually hear what his program produced.
 	He just starts his program and hears it.
 
@@ -114,25 +113,25 @@
 	The results and ways to visualize (or hear) them are integrated into the environment.
 
 	%IDEs architecture specific.
-	As with scientists and musicians, architects can benefit from having integrated programming environments specific to their programming needs.
+	As with scientists and musicians, architects can benefit from having \ac{ide}s specific to their programming needs.
 	They can also benefit from automating small steps and integrating all tools needed to making their programs.
 	In their case it requires a direct correspondence between the program and the 3D geometry that it creates.
 	
-	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they ``come up with''. 
-	They use a process called Generative Design\cite{terzidis2003expressive}\cite{Maeda:2001:DN:559503}.
-	By using Generative Design, they can easily create variants of their designs by changing a small sets of parameters. 
+	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they are designing. 
+	They use a process called \ac{gd}\cite{terzidis2003expressive}\cite{Maeda:2001:DN:559503}.
+	By using \ac{gd}, they can easily create variants of their designs by changing a small set of parameters. 
 	Those parameters are used by the computer to run the algorithm to generate an ``instance'' of their designs. \cite{Santos20144}
 
-	There are several integrated programming environments that make it easier to program for Generative Design. 
+	There are several \ac{ide}s that make it easier to program for \ac{gd}. 
 	%\footnote{In case of Generative Design it is a necessity to have a dedicated programming environment as architects may not be willing to program if it is too hard, too unknown.
 	%After all, their work is not developing software, they will only program if it is a easier alternative for designing a building.}
-	First, many \ac{cad} software packages used by architects have support for Generative Design provided by a plug-in or a set of plug-ins.
-	In these software packages Generative Design is not the main way to model.
-	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for Generative Design. 
+	First, many \ac{cad} software packages used by architects have support for \ac{gd} provided by a plug-in or a set of plug-ins.
+	In these software packages \ac{gd} is not the main way to model.
+	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for \ac{gd}. 
 	As they come from textual programming community, these don't provide direct manipulation as a primary tool.
 
-	Although these integrated programming environments already enable architects to do Generative Design there is still room for improvement.
-	They present some work on freeing architects from being stuck with one of the well established CAD software packages or one of their plug-ins.
+	Although these \ac{ide}s already enable architects to do \ac{gd} there is still room for improvement.
+	They present some work on freeing architects from being stuck with one of the well established \ac{cad} software packages or one of their plug-ins.
 	It is still possible to try to free them even further, they can be freed from the computer that runs their programs.
 
 	One possibility for freeing them from the computer that runs their programs is moving the environment to the cloud and the web browser.
@@ -147,14 +146,14 @@
 	These applications tend to be more independent from the details of the machine where they are running.
 	They all share the same platform, the web browser.
 
-	While there are some web browser applications where Generative Design can be applied there is still room for improving its support.
+	While there are some web browser applications where \ac{gd} can be applied there is still room for improving its support.
 	As an example, OpenJSCAD lets programmers write and run programs that generate 3D objects and displays its results in an interactive 3D view.
 	It doesn't provide constant feedback to changes when writing the program.
 	The only way the programmer has to get feedback from the program is by explicitly running it.
 
-	We propose a web browser based Generative Design environment. 
-	Such environment will allow architects, or anyone interested in Generative Design, to edit Generative Design programs and visualize their results while not requiring any installation. 
-	It will thus allow them to do Generative Design on any computer that has a modern browser. 
+	We propose a web browser based \ac{gd} environment. 
+	Such environment will allow architects, or anyone interested in \ac{gd}, to edit \ac{gd} programs and visualize their results while not requiring any installation. 
+	It will thus allow them to do \ac{gd} on any computer that has a modern browser. 
 	Not being tied to a workstation will allow them to work closer to their clients and to more swiftly change their designs to accommodate the client's needs.
 
 %----------------------------------------------------
@@ -164,7 +163,7 @@
 
 	%Why does it need to be accessible wherever the architect is?
 	Architects imagine buildings and will have to move their ideas outside of their heads wherever they are; if they don't, they might forget them forever. 
-	We have to provide means to translate ideas and it has to be accessible wherever they are.\textsuperscript{citation needed}
+	We have to provide means to translate ideas and it has to be accessible wherever they are.
 
 	How can we provide means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
 
@@ -174,8 +173,8 @@
 
 	%TODO: Rephrase the following paragraph since the well established tools were introduced earlier.
 	There are many well established tools that architects use to translate their ideas; 
-	if we're going to come up with a solution that can rival them then it must be as easy to try out as possible; 
-	and be able to integrate with them.
+	if we're going to come up with a solution that can rival them then \textbf{it must be as easy to try out as possible}; 
+	and \textbf{be able to integrate with them}.
 	%Should I say how it integrates with them? Which is by offering the possibility of producing effects on their current tools, more specifically the CADs they use.
 
 	Summing up, the result of this project should:
@@ -206,7 +205,7 @@
 	This is a problem that new software developers face and have to cope with.
 	Even with this problem, the gain software developers get when they know how to use \ac{ide}s outweighs it and so \ac{ide}s are popular among software developers.
 
-	Bringing more success to software developers makes one wonder whether \ac{ide}s can do the same to people programming for other purposes, such as Generative Design.
+	Bringing more success to software developers makes one wonder whether \ac{ide}s can do the same to people programming for other purposes, such as \ac{gd}.
 	It is not as simple as showing the \ac{ide} to those people and hoping they will know how to use it.
 	Most probably they will just be scared off by the sheer amount of buttons and menus the \ac{ide} has.
 	The amount of time they would need to learn how to use it would be too much and they would rather do something else.
@@ -214,14 +213,14 @@
 	They need different \ac{ide}s with tools adapted to their concerns.
 	The tools these \ac{ide}s should provide don't have to touch so many software development concerns and instead should focus on the specific needs of the area.
 
-	In Generative Design, for example, displaying 3D models is an absolute necessity as 3D models are a great part of the final product of a program.
+	In \ac{gd}, for example, displaying 3D models is an absolute necessity as 3D models are a great part of the final product of a program.
 	\ac{ide}s like Dynamo and Rosetta already provide this and have gone further.
-	Developing a new \ac{ide} for Generative Design requires us to study such \ac{ide}s.
+	Developing a new \ac{ide} for \ac{gd} requires us to study such \ac{ide}s.
 	It is also helpful to look at other \ac{ide}s that focus on concerns of people from yet other areas that still share a certain lack of knowledge of software development.
 	Tech savvy musicians use computers in live performances as their instruments and take advantage of their programmability through \ac{ide}s like Impromptu.
 	Designers and visual artists use Processing and its \ac{ide}, the \ac{pde}, to program for their projects.
 	Others can use IPython to document and inform their experiments by using Python's many libraries.
-	All of these provide inspiration for an \ac{ide} for Generative Design.
+	All of these provide inspiration for an \ac{ide} for \ac{gd}.
 	
 %Domain-specific IDEs.
 \subsubsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
@@ -246,7 +245,7 @@
 	%Maybe include link to live performance video.
 	
 \subsubsection{IPython\cite{PER-GRA:2007}}
-	IPython is a notepad-like environment directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
+	IPython is a notepad-like environment (Figure \ref{fig:ipython:notebook}) directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
 	While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, Julia. \footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}
 	
 	\textbf{
@@ -280,7 +279,7 @@
 	
 %Domain-specific IDEs for graphics, games, 3d modeling and Generative Design.
 \subsubsection{Processing\cite{reas2007processing}}
-	Processing is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{www.processing.org} 
+	Processing is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{Quoting www.processing.org, 9/Nov/2015.}
 	It has an heavy focus on encouraging interaction between its users and so has attracted a big community.\textsuperscript{citation needed}
 	
 	Processing makes it easy to start writing programs that produce visual output. 
@@ -313,13 +312,13 @@
 	\begin{lstlisting}[caption={A simple Processing sketch},label={lst:simple:processing},language=Java]
 	//Hello mouse.
 	void setup() {
-	size(400, 400);
-	stroke(255);
-	background(192, 64, 0);
+		size(400, 400);
+		stroke(255);
+		background(192, 64, 0);
 	}
 	
 	void draw() {
-	line(150, 25, mouseX, mouseY);
+		line(150, 25, mouseX, mouseY);
 	}
 	\end{lstlisting}
 	
@@ -331,7 +330,7 @@
 	%\subsubsubsection{Processing's programming environment}
 	The \ac{pde} is shown in figure \ref{fig:proc:dev:env}. 
 	It is a code editor dedicated to writing Processing \emph{sketches}. 
-	It supports common tasks performed while writing Processing them such as running the currently opened \emph{sketch}, adding/creating resources to the \emph{sketchbook} or exporting \emph{sketches} as executables for several platforms. 
+	It supports common tasks performed while writing them such as running the currently opened \emph{sketch}, adding/creating resources to the \emph{sketchbook} or exporting \emph{sketches} as executables for several platforms. 
 	It also enables the use of multiple files to structure the \emph{sketch's} code.
 	
 	The \ac{pde} only aims to be an introductory environment for programming. 
@@ -436,12 +435,12 @@
 
 \subsubsection{Rosetta\cite{de2012modern}}
 	Rosetta is a platform for \ac{gd}.
-	It grew from the desire to give the freedom to designers using the Generative Design to write their programs using the programming language they want and to easily switch where it takes effect.
+	It grew from the desire to give the freedom to designers using the \ac{gd} to write their programs using the programming language they want and to easily switch where it takes effect.
 	
 	Its authors argue that most environments for Generative Design, developed for a specific \ac{cad}, don't provide portability of programs developed inside them.
 	They also argue that visual programming languages, based on data-flow graphs, don't provide good abstraction mechanisms; programs on such languages are therefore hard to understand and modify.
 	
-	It is also stated that general purpose programming languages, like C, C++, Java and C\#, don't provide domain-specific abstractions from Generative Design and so they are inadequate.
+	It is also stated that general purpose programming languages, like C, C++, Java and C\#, don't provide domain-specific abstractions from \ac{gd} and so they are inadequate.
 	
 	A survey of the most used \ac{gd} systems showed that the most popular \ac{tpl}s for \ac{gd}, like AutoLisp, RhinoScript, and GDL, are old, provide little domain-specific features and make it difficult to define them.
 	It also showed that \ac{vpl}s for \ac{gd}, like Grasshopper and GenerativeComponents, enforce a very restricted programming paradigm and programs scale poorly with size and complexity, making them suitable only for small throwaway prototypes. 
@@ -477,7 +476,7 @@
 	\end{itemize}
 	
 	It enables this by providing several ``frontend'' programming languages and several ``backends'' which take the results of the program. 
-	The programs written in a ``frontend'' language are compiled into an intermediate language which them translates its semantics to the selected ``backend''.
+	The programs written in a ``frontend'' language are compiled into an intermediate language which then translates its semantics to the selected ``backend''.
 	
 	Some ``frontends'' supported by Rosetta are AutoLisp, Javascript, Racket and Python; some of the supported ``backends'' include Autodesk AutoCAD, Autodesk Revit, Sketchup, Rhinoceros 3D, TikZ and OpenGL.
 	
@@ -489,7 +488,7 @@
 	In his essay\cite{victor2012learnable}, Bret Victor described design principles over systems for learning programming.
 	
 	The programming language and the programming environment are essential parts of the programming experience.
-	The programming language is allows the programmer to express himself in a clear, specific way; the programming environment allows him to write programs and understand what they actually do.
+	The programming language allows the programmer to express himself in a clear, specific way; the programming environment allows him to write programs and understand what they actually do.
 	
 	Programs written in the programming language need to reflect something from the programmer that is useful for programming.
 	They should be about things the programmer can identify with (something that he knows); should allow him to talk about different parts of the problem separately; should allow him to bring those parts together; and should be readable.
@@ -500,7 +499,7 @@
 \subsection{Moving to the Web}
 	Web browsers didn't start as feature-rich and performant as they are now.
 	They started as hypertext browsers that made it easier to read hypertext.
-	They could display images and text and could jump from page to page by following hyperlinks or following \ac{url}s.
+	They could display images and text and could jump from page to page by following hyperlinks or following URLs.
 	Only with the development of new features and the demand for more performance and features did they slowly get into the shape they are now.
 
 	The number of devices connected to the internet is big enough to say that internet access is almost ubiquitous.
@@ -508,47 +507,27 @@
 	If viewed this way, devices can become windows to distributed systems over the internet.
 	With such idea people can start to use any device to access those distributed systems.
 
-	There must be a platform to support (as in display) such windows and Web browsers are good possibility.
-	Almost any of these devices that interface with people have web browsers.
+	There must be a platform to support (as in display) such windows and Web browsers are a good possibility.
+	Almost any of these devices have web browsers.
 	These not only include the traditional desktop and laptop computers but also the new smartphones, tablets, gaming consoles, smart appliances and the list goes on and on.
 
-	Web browsers enable them to connect their users to the World Wide Web and in many cases to the rest of the internet, as World Wide Web is often used as an interface to services on the internet.
+	Web browsers enable devices to connect their users to the \ac{www} and in many cases to the rest of the internet, as \ac{www} is often used as an interface to services on the internet.
 	Some of those interfaces are as simple as a series of web pages generated by the service as they are used and some are as complex as pages interactively evolving with user input while at the same time exchanging information with many servers.
 	Most blogs are examples of the first, technically simple, and most social networking sites are examples of the second, technically complex.
 	All of these have forced web browsers to evolve into a performant, feature-rich platform.
-	The extent of their performance and features makes them even capable of hosting desktop applications from code editors to video games (without plugins like Adobe Flash which are like back doors).
+	The extent of their performance and features makes them even capable of hosting desktop applications from code editors to video games (without plugins like Adobe Flash).
 
 	And this has caught on.
 	More and more people are replacing their desktop applications with web based ones.
 	Web browsers are effectively replacing \ac{os}-level applications.
 	And this also comes as an advantage for developers as the browser acts an uniform platform across all different devices they want to develop for.
 
-	It is in this time where web browsers are so capable that it becomes possible to develop a Generative Design IDE for the web.
-
-\subsection{Integrated development environments in the web browser}
-	%How to make IDE for GD?
-	%Let's first look at anything about IDEs.
-
-	Making a browser based integrated development environment for \ac{gd} poses several challenges.
-	To overcome these challenges we can start by looking at how others have solved similar problems.
-	In our context there are several problems for which we can look for how others solved them.
-	These problems include:
-	\begin{itemize}
-		\item Using web browser technologies to build interactive applications.
-		\item Building applications similar to desktop applications using web technologies.
-		\item Understanding the guidelines for making useful integrated programming environments.
-		\item Building integrated programming environments for other domains.
-	\end{itemize}
-
-	We start by looking at LightTable, a code editor that is implemented on top of web technologies.
-	We then to enumerate some guidelines for making a programming environment.
-	Two domain specific integrated programming environments are presented.
-	Then we progress to integrated programming environments more closely related to graphics followed by those related to \ac{cad} and finally those specific to architectural design.
+	It is in this time where web browsers are so capable that it becomes possible to develop a \ac{gd} \ac{ide} for the web.
 
 %Inspiration from anything about IDEs.
 \subsection{LightTable}
 	LightTable is an example of a desktop application that uses Web technologies.
-	More specifically, it uses node-webkit as its runtime allowing it to use html layout engine for its user interface, to use javascript as its programming language and to use node.js modules.
+	More specifically, it uses node-webkit as its runtime allowing it to use html layout engine for its user interface, to use javascript as its programming language and to use node.js\cite{tilkov2010node} modules.
 	LightTable is written in ClojureScript\cite{10.1109/MIC.2011.148}, a subset of Clojure that compiles to Javascript.
 
 	LightTable is a code editor for the Clojure programming language\cite{hickey2008clojure}. 
@@ -820,7 +799,6 @@
 %----------------------------------------------------
 %NAVschedule
 \section{Schedule}
-	Some work as already been done.
 	The schedule for the work concluding the thesis is presented in Figure \ref{fig:schedule}.
 	It has high-level tasks to convey the overall distribution of work for the thesis.
 	
@@ -840,6 +818,9 @@
 	Close to the end of the implementation we will start to assemble the thesis document and its defense.
 	We will be writing parts of the document as candidates to publication in Architecture and Programming conferences.
 	(Themes being results and reasons of our work.)
+	
+	Some work as already been done.
+	The proof-of-concept prototype is part of that work, more specifically part of the work on the editor.
 		
 	
 
@@ -868,6 +849,9 @@
 	\acro{cad}[CAD]{Computer-Aided-Design}
 	\acro{tpl}[TPL]{Textual Programming Language}
 	\acro{vpl}[VPL]{Visual Programming Language}
+	\acro{www}[WWW]{World Wide Web}
+	\acro{os}[OS]{Operating System}
+	\acro{oop}[OOP]{Object Oriented Programming}
 \end{acronym}
 
 % 
