Architecture: Redone high-level architecture diagram.

--- a/report.tex
+++ b/report.tex
@@ -679,7 +679,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=1.0\textwidth]{img/gen_sol}
-		\caption{A diagram of the architecture of the solution. Rectangles represent components and lines represent communication between components.}
+		\caption{A diagram of the architecture of the solution. Rectangles represent components, dashed rectangles represent where components will run and lines represent communication between components.}
 		\label{fig:gen:sol}
 	\end{figure}	
 	
